:fire: letzte änderung

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ app.version=@project.version@
 
 # Admin User
 spring.security.user.name=root
-spring.security.user.password=Comline2022!
+spring.security.user.password=root
