--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>de.struma</groupId>
 	<artifactId>budget_book</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>budget_book</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
