:recycle: Templates bereinigt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ app.version=@project.version@
 spring.security.user.name=root
 spring.security.user.password=root
 
+# Error Handling
+server.error.whitelabel.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+server.error.path=/error
