:recycle: Button geändert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ spring.security.user.name=root
 spring.security.user.password=root
 
 # Error Handling
-server.error.whitelabel.enabled=false
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
-server.error.path=/error
+# server.error.whitelabel.enabled=false
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+# server.error.path=/error
