:bookmark: Refactored die DisplayViews

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=8082
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-scheduled.jobs.enabled = true
+scheduled.jobs.enabled = false
 
 
 # Version
