--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>de.struma</groupId>
 	<artifactId>budget_book</artifactId>
-	<version>0.2.3</version>
+	<version>0.2.4</version>
 	<name>budget_book</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -71,7 +71,7 @@
 						</exclude>
 					</excludes>
 				</configuration>
-			</plugin>
+			</plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target></configuration></plugin>
 		</plugins>
 	</build>
 
